# literallyme

./: .gitignore  Dockerfile  README.md  check_lock.sh  cli.py  create_invoice.py  get_models.sh  main.py  pyproject.toml  setup.sh  utils.py
literallyme/: __main__.py  bot.py  bot_aiogram.py  charts.py  db.py  get_sticks.py  handlers.py  pack_creation.py  pack_finisher.py  utils.py  worker.py
literallyme/swapper/: swap.py  utils.py
literallyphoto/: .gitignore  README.md  client.js
literallyphoto/cloud/api-service/: .gcloudignore  Dockerfile  README.md  allowedOrigins.js  app.js  authRoutes.js  balance.js  corsOptions.js  firebase.js  index.js  middleware.js  package-lock.json  package.json
literallyphoto/cloud/bookkeeper-service/: Dockerfile  README.md  bookkeeper.js  package-lock.json  package.json
literallyphoto/cloud/cloud-functions/check-training/: README.md  index.js  package.json
literallyphoto/cloud/cloud-functions/payments/: README.md  index.js  package-lock.json  package.json
literallyphoto/cloud/image-generation-service/: Dockerfile  README.md  index.js  package-lock.json  package.json
literallyphoto/cloud/workflows/: README.md  generation-workflow.yaml  generation_envs.yaml  image-generation-workflow.yaml  image_generation_envs.yaml  training-workflow.yaml  training_envs.yaml
literallyphoto/telegram/: README.md
stickers/0/: 005_grinning_face.webm  007_face_with_symbols_on_mouth.webm  008_thumbs_up.webm  009_angry_face.webm  5366042284611610658.webm  5460885659407357966.webm  cena.webm  gachi.webm  homelander2.webm  homelander_blood.webm  idk.webm  kiss.webm  margo.webm  ponasenkov.webm  popcorn.webm  rock.webm  saul.webm  taking_photo.webm
tma/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
tma/src/: index.css  main.tsx
tma/src/api/: api.ts  mock.ts  mockApi.ts
tma/src/components/: AppContent.tsx  GenerationInterface.tsx  ModelCard.tsx  ModelCreator.tsx  NewModelCard.tsx
tma/src/config/: telegram.ts
tma/src/hooks/: useModelCreation.ts  useTelegramUser.ts  useTelegramWebApp.ts
tma/src/providers/: TelegramProvider.tsx
tma/src/services/: telegram.ts
tma/src/types/: index.ts  telegram.ts
tma/src/utils/: security.ts  telegram.ts
(+216 files in other folders)
