[tool.poetry]
name = "literallyme"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
telethon = "^1.33.1"
replicate = "^0.22.0"
python-dotenv = "^1.0.0"
mongo = "^0.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
ipython = "^8.20.0"
psutil = "^5.9.7"
numpy = "^1.26.3"
insightface = "0.7"
motor = "^3.3.2"
filelock = "^3.15.4"
onnx = {git = "https://github.com/onnx/onnx"}
torch = "^2.3.1"
onnxruntime-gpu = {version = "^1.18.1", source = "onnxruntime-cuda-12"}
nvidia-ml-py3 = "^7.352.0"

[[tool.poetry.source]]
name = "onnxruntime-cuda-12"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

